# PixyVibe

./: .gitignore  debug_clipboard.sh
companion/android/: settings.gradle.kts
core/: Cargo.toml  build.rs  cbindgen.toml  exports.def  screenshottool.h
core/src/: ffi.rs  lib.rs
core/src/api/: mod.rs  server.rs
core/src/output/: file.rs  mod.rs  optimize.rs
core/src/processing/: diff.rs  gif.rs  image.rs  mod.rs
core/src/targets/: companion.rs  mod.rs
linux/: Cargo.toml
linux/data/: com.pixyvibe.screenshottool.desktop
linux/src/: action_toolbar.rs  app.rs  capture.rs  main.rs  overlay.rs  recording_pill.rs  region_selector.rs  settings.rs
macos/: Package.swift
macos/CScreenshotTool/: shim.c
macos/ScreenshotTool/: ActionToolbar.swift  App.swift  AppDelegate.swift  CapturePreview.swift  ClickAnimator.swift  ClipboardManager.swift  CompanionPreviewWindow.swift  DesignSystem.swift  HotkeyManager.swift  ImageEditor.swift  Info.plist  ModePickerView.swift  OnboardingView.swift  OverlayWindow.swift  PairedDeviceStore.swift  RecordingPill.swift  RegionSelector.swift  RustBridge.swift  ScreenCapture.swift  ScreenshotHistory.swift  ScreenshotTool-Bridging-Header.h  SettingsView.swift  ToastNotification.swift
mcp-server/: package-lock.json  package.json
mcp-server/src/: client.ts  index.ts  tools.ts
windows/: ScreenshotTool.sln
windows/ScreenshotTool/: ActionToolbar.xaml  ActionToolbar.xaml.cs  App.xaml  App.xaml.cs  CapturePreviewPanel.xaml  CapturePreviewPanel.xaml.cs  ClipboardManager.cs  CompanionPreviewWindow.xaml  CompanionPreviewWindow.xaml.cs  (+23 more)
(+47 files in other folders)
