[package]
name = "screenshottool"
version = "0.1.0"
edition = "2021"

[lib]
name = "screenshottool"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
image = "0.25"
gif = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
mdns-sd = "0.11"
axum = "0.7"
base64 = "0.22"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
futures-util = "0.3"
gethostname = "1.0"
if-addrs = "0.13"

[build-dependencies]
cbindgen = "0.26"
